# posts-API

./: Cargo.toml  README.md
migrations/2026-03-27-185050-0000_users/: up.sql
migrations/2026-03-27-185101-0000_posts/: up.sql
src/: constants.rs  lib.rs  main.rs  schema.rs
src/errors/: app_errors.rs  db_errors.rs  mod.rs
src/handlers/: mod.rs  posts_handlers.rs  users_handlers.rs
src/models/: posts.rs  users.rs
src/repositories/: mod.rs  posts_repositories.rs  users_repositories.rs
src/services/: authentification.rs  mod.rs  posts_service.rs  users_service.rs
src/state/: jwt.rs  mod.rs
