[package]
name = "posts_api_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
diesel = { version = "2.3.7", features = ["postgres", "chrono"] }
diesel-async = { version = "0.8.0", features = ["postgres", "deadpool", "tokio"] }
deadpool = { version = "0.13.0", features = ["rt_tokio_1"] }
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dotenv = "0.15.0"
chrono = { version = "0.4.44", features = ["serde"] }
argon2 = "0.5.3"
argon2-async = "0.2.0"
axum-jwt-auth = "0.6.3"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
uuid = { version = "1.23.0", features = ["v4", "v7", "serde"] }
